B-F Sandbox Full-Backup/src/objects/Group_Promotions__c.object
<CustomObject>
    <description>Group Promotion (Banner Group)</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Wholesaler</description>
        <inlineHelpText>Account Wholesaler</inlineHelpText>
        <label>Account Wholesaler</label>
        <referenceTo>Account_Wholesaler__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Deals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Group_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Code__c</fullName>
        <label>Activity Code</label>
        <picklist>
            <controllingField>Application__c</controllingField>
            <picklistValues>
                <fullName>Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pouring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incentives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ranging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xmas Catalogue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail Listings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uniforms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Comment__c</fullName>
        <label>Activity Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <controllingField>Deal_Method__c</controllingField>
            <picklistValues>
                <fullName>On Retailer&apos;s Invoice - Rate per Case On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Retailers Invoice - Rate per Case Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Lump Sum On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Lump Sum Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Lump Sum On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Lump Sum Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Third Party - Lump Sum On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Third Party - Lump Sum Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Rate per Case On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Customer - Rate per Case Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Rate Per Case On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate Group - Rate Per Case Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approx_LUC_exc_GST__c</fullName>
        <label>Approx LUC (exc GST)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banner_Group_Name__c</fullName>
        <formula>Banner_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner Group</label>
        <referenceTo>Banner_Groups__c</referenceTo>
        <relationshipName>Group_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Should be done at the Brand Level</inlineHelpText>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Group_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Buy_Period_End_Date__c</fullName>
        <description>Buy Period End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buy_Period_Start_Date__c</fullName>
        <description>The period that the Account can purchase the product.</description>
        <inlineHelpText>The period that the Account can purchase the product.</inlineHelpText>
        <label>Buy Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Op_Type__c</fullName>
        <label>Co Op Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case Rate (Rebate)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum (Rebate)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Level__c</fullName>
        <label>Customer Level</label>
        <picklist>
            <picklistValues>
                <fullName>Banner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Promotion_ID__c</fullName>
        <description>Promotion Name</description>
        <inlineHelpText>Manual named field</inlineHelpText>
        <label>Customer Promotion ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Channel__c</fullName>
        <description>Vistex - Tactic</description>
        <inlineHelpText>Vistex - Tactic</inlineHelpText>
        <label>Deal Channel</label>
        <picklist>
            <picklistValues>
                <fullName>ON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Display_Helper_Type__c</fullName>
        <formula>IF(  ISPICKVAL(Deal_Method__c, &apos;Rate Per Case&apos; ) ||  ISPICKVAL(Deal_Method__c, &apos;Rate per Case Off&apos; ), &apos;Rate per Case&apos;, &apos;Lump Sum&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Display Helper Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Method__c</fullName>
        <label>Deal Method</label>
        <picklist>
            <controllingField>Deal_Channel__c</controllingField>
            <picklistValues>
                <fullName>Rate Per Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate per Case Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lump Sum Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Promotion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extra_Co_Op_per_Case__c</fullName>
        <inlineHelpText>Dollar per Case - Trade Allowance Discount Amount</inlineHelpText>
        <label>Extra Co-Op per Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extra_Unit_PA__c</fullName>
        <inlineHelpText>In Addition to the existing PA</inlineHelpText>
        <label>Extra PA ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <inlineHelpText>System Generated Key</inlineHelpText>
        <label>Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LUC_GST_INC__c</fullName>
        <inlineHelpText>Landed Unit Cost - What the retailer pays.</inlineHelpText>
        <label>LUC (GST INC) ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lump_Sum_Co_OP__c</fullName>
        <inlineHelpText>Lumps Sum of Trade Allowance allocated to a Pay Date (Either one or the other Co-op value)</inlineHelpText>
        <label>Lump Sum Co-Op</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lump_Sum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lump Sum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <inlineHelpText>Sell - LUC / Sell</inlineHelpText>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Material_Product_Group__c</fullName>
        <inlineHelpText>This will be the old product group.</inlineHelpText>
        <label>Material Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note_to_Approver__c</fullName>
        <label>Note to Approver</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <description>Vistex Needed</description>
        <inlineHelpText>Defined by Vistex</inlineHelpText>
        <label>Objective</label>
        <picklist>
            <picklistValues>
                <fullName>001 Price Allowance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>003 Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>004 Route to Market - Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>005 Visibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>009 Bonus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ongoing_PA__c</fullName>
        <inlineHelpText>This number should come from Vistex - Sum of all PA Promotions

Off Invoice from the Wholesaler</inlineHelpText>
        <label>Ongoing PA ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PA_Type__c</fullName>
        <label>PA Type</label>
        <picklist>
            <picklistValues>
                <fullName>$ Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$ Rebated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$ Scan Deal (Rebated)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>Max Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exact Promoted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDVP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Mix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Strength</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Group__c</fullName>
        <inlineHelpText>Product Group - This will be a drill down from brand to product class, to material product group.(Old product group) And allow multiple selection.  Note the rule is one promotion per equally priced and discounted material product group. CD</inlineHelpText>
        <label>Promotion Group</label>
        <picklist>
            <picklistValues>
                <fullName>Example 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Example 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Example 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Mechanics__c</fullName>
        <label>Promotion Mechanics</label>
        <picklist>
            <picklistValues>
                <fullName>GWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bundle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price &amp; GWP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price &amp; WIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Prize</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Promotion_Period_End_Date__c</fullName>
        <label>(End Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Period_Start_Date__c</fullName>
        <description>The Date the Promotion runs in the store.</description>
        <inlineHelpText>The Date the Promotion runs in the store.</inlineHelpText>
        <label>Promotion (Start Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Promotion_Type__c</fullName>
        <label>Promotion Type</label>
        <picklist>
            <picklistValues>
                <fullName>In-Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelf</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Per_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rate Per Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sell_Price__c</fullName>
        <inlineHelpText>(1) This is the Sell Price of the Promoted Pack</inlineHelpText>
        <label>Sell Price (GST INC) ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>QLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tatic__c</fullName>
        <description>Defined by Vistex</description>
        <inlineHelpText>Defined by Vistex</inlineHelpText>
        <label>Tatic</label>
        <picklist>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need Unit Examples</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vistex_Agreement_Number__c</fullName>
        <description>Vistex Agreement Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Vistex Agreement Number</inlineHelpText>
        <label>Vistex Agreement Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vistex_Agreement_Type__c</fullName>
        <description>Defined by Vistex</description>
        <inlineHelpText>Defined by Vistex</inlineHelpText>
        <label>Vistex Agreement Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vistex_Condition_Type__c</fullName>
        <label>Vistex Condition Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_Source__c</fullName>
        <label>Volume Source</label>
        <picklist>
            <picklistValues>
                <fullName>W/S Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W/S Rebate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Name__c</fullName>
        <formula>IF( $RecordType.Name == &apos;Group Deal&apos;,  Wholesaler__r.Name,  Account_Wholesaler__r.Wholesaler__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wholesaler Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the individual wholesaler shed (ie, ALM NSW)</inlineHelpText>
        <label>Wholesaler</label>
        <referenceTo>Wholesaler__c</referenceTo>
        <relationshipLabel>Deals</relationshipLabel>
        <relationshipName>Group_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Customer_Promotion_ID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Promotion_Period_Start_Date__c</columns>
        <columns>Buy_Period_Start_Date__c</columns>
        <columns>Banner_Group__c</columns>
        <columns>Activity_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Approved_Deals</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>Approved Deals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Deal-{0}</displayFormat>
        <label>Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <recordTypes>
        <fullName>Group_Deal</fullName>
        <active>true</active>
        <description>Deal form to be used for banner groups</description>
        <label>Group Deal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outlet_Deal</fullName>
        <active>true</active>
        <description>Deal Sheet for sales rep to be used for outlets.</description>
        <label>Outlet Deal</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Buy_Period_End_Date</fullName>
        <active>true</active>
        <description>Buy period end date can not be lower than buy period start date.</description>
        <errorConditionFormula>Buy_Period_End_Date__c  &lt; Buy_Period_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Buy_Period_End_Date__c</errorDisplayField>
        <errorMessage>Buy period end date can not be lower than buy period start date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Promotion_Period_End_Date</fullName>
        <active>true</active>
        <description>Promotion period end date cannot be lower than promotion period start date.</description>
        <errorConditionFormula>Promotion_Period_End_Date__c &lt;  Promotion_Period_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Promotion_Period_End_Date__c</errorDisplayField>
        <errorMessage>Promotion period end date cannot be lower than promotion period start date.</errorMessage>
    </validationRules>
</CustomObject>